enable preview features and use jdk 14